# Rigid-and-Non-Rigid-Transformation-of-3D-Human-Body

./: CMakeLists.txt  Reader.cpp  Reader.h  Readme.md  Reference_Mesh.vtk  Target_Mesh.vtk  main.cxx  parameters.vtk
updated/: main.cxx
